Fix tabs icon visibility on scroll

--- a/src/@styles/main.less
+++ b/src/@styles/main.less
@@ -2,7 +2,7 @@ main {
 
     &.scrolled md-tabs {
         position: fixed !important;
-        top: -28px;
+        top: -30px;
         z-index: 2;
 
         width: 100%;
